--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -424,7 +424,7 @@
                   </mat-slide-toggle>
                 </div>
                 <div class="col-sm-12 text-center p-2">
-                  <button mat-raised-button class="btn-submit" (click)="proceed()"
+                  <button class="btn-submit btn" (click)="proceed()"
                     [disabled]="!form.valid || valid ||verifyDate">Place Order</button>
                   <app-loader>
                   </app-loader>
