--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -267,9 +267,9 @@
     Copyright © 2019, GenieCapture. All rights reserved
   </div>
   <div class="terms-of-use">
-    <a href="terms" target="_blank" id="link">Terms of Use </a>
+    <a href="terms" >Terms of Use </a>
     <span class="space">| </span>
-    <a href="privacy-policy" target="_blank" id="link">Privacy Policy</a>
+    <a href="privacy" >Privacy Policy</a>
   </div>
 </div>
 </div>
