--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,7 +53,7 @@
             </div>
             <div class="terms-privacy">
                 <a target="_blank" routerLink="/terms">Terms of Use</a>
-                <a target="_blank" routerLink="/privacy-policy">Privacy Policy</a>
+                <a target="_blank" routerLink="/privacy">Privacy Policy</a>
             </div>
         </div>
 
